--- a/project-plan.qmd
+++ b/project-plan.qmd
@@ -34,11 +34,9 @@ Pathophysiology
 ------------
 
 Among trauma-related conditions, traumatic brain injury (TBI) is a major cause of death and disability worldwide and
-constitutes a significant public health burden.(3) TBI is the result of an external force causing neurological
-impairments that may be either transient or permanent.(4) Furthermore, TBI should not be regarded as a single event
-but rather as a dynamic process. The initial trauma **often triggers a secondary pathophysiological cascade**, including
-ischemia, oedema, and metabolic disturbances, that develop over time and critically influence long-term outcomes. (5)
-As such, patients **with TBI** often require admission to the intensive care unit (ICU). 
+constitutes a significant public health burden (3). TBI is the result of an external force causing neurological
+impairments that may be either transient or permanent (4). Furthermore, TBI should not be regarded as a single event
+but rather as a dynamic process. The initial trauma often triggers a secondary pathophysiological cascade, including ischemia, oedema, and metabolic disturbances, that develop over time and critically influence long-term outcomes (5). As such, patients with TBI often require admission to the intensive care unit (ICU). 
 
 Management of TBI 
 ------------
@@ -70,13 +68,6 @@ hyperventilation should be avoided within the first 24 hours, and corticosteroid
 
 <!-- MGW: Try to find a balance when it comes to the level of detail that you use. The specific ICD and CPP targets feel a bit too specific. -->
 
-(At Karolinska University Hospital, the setting for this study, similar principles are seen in the Traumahandboken.
-For severe TBI, defined as GCS < 8, early airway protection with intubation in unconscious patients, rapid CT
-imaging, timely administration of tranexamic acid, and early neurosurgical consultation are recommended. In cases
-where there are signs of impending herniation, the handbook advises measures such as controlled hyperventilation and
-osmotherapy with mannitol or hypertonic saline. All this is always in conjunction with urgent neurosurgical
-evaluation. (Källa Karolinska handboken))  <!-- Remove paragraph? MGW: Yes, I think so.-->
-
 Trauma Quality Improvement
 ------------
 
@@ -104,15 +95,6 @@ This, on the other hand, leaves TBI-specific vulnerabilities undercharacterised.
 suggests that, despite overall declines in OFI, patients with TBI remain at risk of preventable shortcomings,
 underscoring the need for TBI-specific quality improvement efforts (23).
 
-
-<!--Previous papers at Karolinska University Hospital have contributed to this field by describing OFIs across different
-aspects of trauma care. In 2023, Hussein A. et al. analysed patient- and process-related factors during trauma
-resuscitation and concluded that variables such as time to first CT and injury severity were strongly associated with
-OFI (17). Cao ES. et al. continued the focus on ICU cohorts, presenting that 9.9% ICU-admitted adult trauma patients
-experienced at least one OFI (1). Most recently, Szolnoky K et al. assessed OFI patterns in trauma cohorts and
-demonstrated that, although overall incidence declined over time, patients with TBI remained likely to have
-preventable shortcomings in care (18).-->
-
 Aim
 =====
 This study aims to identify and describe opportunities for improvement in the care of adult trauma patients
@@ -124,7 +106,7 @@ Methods
 Study Design
 -----------
 A single-centre, registry-based retrospective cohort study was conducted at Karolinska University Hospital in Solna
-(NKS). The trauma registry for NKS is a comprehensive trauma registry that **is part of** the Swedish National Trauma
+(NKS). The trauma registry for NKS is a comprehensive trauma registry that is part of the Swedish National Trauma
 Registry, SweTrau, and is compliant with the Utstein template for uniform reporting after trauma (Källa  Utstein
 Template). As such, the registry prospectively records patient demographics, prehospital and emergency department
 physiology, times of key interventions such as imaging, surgery and transfer, injury severity scores, and in-hospital outcome. 
@@ -173,10 +155,10 @@ findings and cases without deviations.
 
 Participants
 ------------
-All adult patients with TBI recorded in the Karolinska trauma registry between 2012 and
-2023 who also had been screened for opportunity for improvements **were included in this study**. Furthermore, TBI was defined as (a GCS score of ≤8
-combined with an Abbreviated Injury Scale ≥3 for the head region ….  ) Patients were eligible irrespective of level <!-- Definition found in Elins paper, same applies?--><!-- Yes -->
-of care.
+All adult patients with TBI recorded in the Karolinska trauma registry between 2012 and 2023 who also had been
+screened for opportunity for improvements were included in this study. Furthermore, TBI was defined as a GCS score of
+≤8 combined with an Abbreviated Injury Scale ≥3 for the head region. Patients were eligible irrespective of level of
+care.
 
 Patients younger than 18 years were excluded, as their trauma follows separate clinical care systems and quality <!-- is this true? could not find source-->
 review processes that differ from those for adults . Also excluded were patients declared dead on arrival, since
@@ -225,7 +207,7 @@ into a multivariable logistic regression model to estimate adjusted associations
 (OR) with 95% confidence interval (CI), and a p-value of <0.05 was used as the threshold for statistical
 significance. To ensure objectivity, all statistical analyses were initially performed on synthetic data before being
 applied to the combined trauma registry and trauma care quality database. Statistical analyses were conducted in R
-version x. <!-- I assume we will do both bivariable and multivariable regression? --> 
+version x. 
 
 
 
